--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "nextjs-extools",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://taitran-hcm.github.io/eXtools/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy" : "gh-pages -d build"
   },
   "dependencies": {
     "axios": "^1.2.1",
