--- a/package.json
+++ b/package.json
@@ -9,15 +9,25 @@
     "start": "next start",
     "lint": "next lint",
     "predeploy": "npm run build",
-    "deploy" : "gh-pages -d build"
+    "deploy": "gh-pages -d .next"
   },
   "dependencies": {
     "axios": "^1.2.1",
+    "gh-pages": "^5.0.0",
     "next": "^13.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "sass": "^1.56.0"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com-eXtools:TaiTran-HCM/nextJS-eXtools.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
